--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,22 +2,22 @@ on: push
 
 jobs:
   check:
-    runs-on: ubuntu-latest
+    runs-on: manjarolinux
     container: yakwilik/cxx_all
     steps:
       - uses: actions/checkout@v2
       - run: make check
   build:
-    runs-on: ubuntu-latest
+    runs-on: manjarolinux
     container: yakwilik/cxx_all
-    needs: [check]
+    # needs: [check]
     steps:
     - uses: actions/checkout@v2
     - run: make build
   test:
-    runs-on: ubuntu-latest
+    runs-on: manjarolinux
     container: yakwilik/cxx_all
-    needs: [build]
+    # needs: [build]
     steps:
       - uses: actions/checkout@v2
       - run: make test
