--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,43 +8,10 @@ jobs:
     container: bodjan/cxx
     steps:
       - uses: actions/checkout@v2
-      - run: make check
+      - run: make build
   build:
     runs-on: ubuntu-latest
-    container: bodjan/cxx
-    needs: [check]
+    container: yakwilik/cxx_all
     steps:
-      - uses: actions/checkout@v2
-      - run: make build
-  test:
-    runs-on: ubuntu-latest
-    container: bodjan/cxx
-    needs: [build]
-    steps:
-      - uses: actions/checkout@v2
-      - run: make test
-  # memtest:
-  #   runs-on: ubuntu-latest
-  #   container: bodjan/cxx
-  #   needs: [build]
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - run: make memtest
-  #     - name: Upload artifacts
-  #       uses: actions/upload-artifact@v2
-  #       if: failure()
-  #       with:
-  #         name: Valgrind logs
-  #         path: valgrind.log
-  # covtest:
-  #   runs-on: ubuntu-latest
-  #   container: bodjan/cxx
-  #   needs: [test]
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - run: make covtest
-  #     - name: Upload artifacts
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: Test coverage
-  #         path: build/report/
+    - uses: actions/checkout@v2
+    - run: make build
