--- a/project/client/interface/PartyTime/API/CMakeLists.txt
+++ b/project/client/interface/PartyTime/API/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(ApiLib VERSION 0.1 LANGUAGES CXX)
+project("ApiLib")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -9,6 +9,8 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -Wextra -Wpedantic -Werror")
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets LinguistTools REQUIRED)
@@ -18,11 +20,22 @@ find_package(Qt6 REQUIRED COMPONENTS Network)
 set(TS_FILES PartyTime_ru_RU.ts)
 set(COMPONENTS)
 
+file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp)
+file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/**/*.h)
 
-file(GLOB_RESOURCE)
+set(LIB_NAME api)
 
+add_library(${LIB_NAME} ${SOURCES} ${HEADERS})
 
+target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/GetService ${CMAKE_CURRENT_SOURCE_DIR}/PostService)
 
+set(API_LIB ${LIB_NAME})
+set(API_LIB ${API_LIB} PARENT_SCOPE)
+set(API_INCLUDE_DIRS ${LIB_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/GetService ${CMAKE_CURRENT_SOURCE_DIR}/PostService)
+set(API_INCLUDE_DIRS ${API_INCLUDE_DIRS} PARENT_SCOPE)
 
-# adasdcsacc
+message("API_LIB = ${API_LIB}")
+message("API_INCLUDE_DIRS = ${API_INCLUDE_DIRS}")
 
+enable_testing()
+# add_subdirectory(tests)
