pages can be included in the base class

--- a/project/client/interface/PartyTime/CMakeLists.txt
+++ b/project/client/interface/PartyTime/CMakeLists.txt
@@ -37,8 +37,6 @@ set(PROJECT_SOURCES
         main.cpp
         base.cpp
         base.h
-        painter.cpp
-        painter.hpp
         base.ui
         static.qrc
         ${TS_FILES}
@@ -50,7 +48,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
     )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB})
 target_include_directories(${PROJECT_NAME} PUBLIC ${API_INCLUDE_DIRS} ${PAGES_INCLUDE_DIRS} ${COMPONENTS_INCLUDE_DIRS})
 
     qt_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
@@ -58,13 +56,13 @@ else()
     if(ANDROID)
         add_library(PartyTime SHARED
             ${PROJECT_SOURCES}
-            target_link_libraries(${PROJECT_NAME} PRIVATE ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB})
+            target_link_libraries(${PROJECT_NAME} PUBLIC ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB})
             target_include_directories(${PROJECT_NAME} PUBLIC ${API_INCLUDE_DIRS} ${PAGES_INCLUDE_DIRS} ${COMPONENTS_INCLUDE_DIRS})
         )
     else()
         add_executable(PartyTime
             ${PROJECT_SOURCES}
-            target_link_libraries(${PROJECT_NAME} PRIVATE ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB})
+            target_link_libraries(${PROJECT_NAME} PUBLIC ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB})
             target_include_directories(${PROJECT_NAME} PUBLIC ${API_INCLUDE_DIRS} ${PAGES_INCLUDE_DIRS} ${COMPONENTS_INCLUDE_DIRS})
         )
     endif()
@@ -72,7 +70,7 @@ else()
     qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 endif()
 
-target_link_libraries(PartyTime PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+#target_link_libraries(PartyTime PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 target_link_libraries(PartyTime PRIVATE Qt6::Network)
 
 set_target_properties(PartyTime PROPERTIES
@@ -86,68 +84,3 @@ set_target_properties(PartyTime PROPERTIES
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(${PROJECT_NAME})
 endif()
-
-#cmake_minimum_required(VERSION 3.5)
-
-#project(NewMeeUpClient VERSION 0.1 LANGUAGES CXX)
-
-#set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-#set(CMAKE_AUTOUIC ON)
-#set(CMAKE_AUTOMOC ON)
-#set(CMAKE_AUTORCC ON)
-
-#set(CMAKE_CXX_STANDARD 11)
-#set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-#find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
-#find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
-#find_package(Qt6 REQUIRED COMPONENTS Network)
-
-
-#set(PROJECT_SOURCES
-#        main.cpp
-#        painter.cpp
-#        painter.hpp
-#        base.cpp
-#        base.h
-#        static.qrc
-#)
-
-#if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-#    qt_add_executable(NewMeeUpClient
-#        MANUAL_FINALIZATION
-#        ${PROJECT_SOURCES}
-#    )
-## Define target properties for Android with Qt 6 as:
-##    set_property(TARGET NewMeeUpClient APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-##                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-## For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
-#else()
-#    if(ANDROID)
-#        add_library(NewMeeUpClient SHARED
-#            ${PROJECT_SOURCES}
-#        )
-## Define properties for Android with Qt 5 after find_package() calls as:
-##    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-#    else()
-#        add_executable(NewMeeUpClient
-#            ${PROJECT_SOURCES}
-#        )
-#    endif()
-#endif()
-
-#target_link_libraries(NewMeeUpClient PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
-#target_link_libraries(NewMeeUpClient PRIVATE Qt6::Network)
-
-#set_target_properties(NewMeeUpClient PROPERTIES
-#    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
-#    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-#    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-#    MACOSX_BUNDLE TRUE
-#    WIN32_EXECUTABLE TRUE
-#)
-
-#if(QT_VERSION_MAJOR EQUAL 6)
-#    qt_finalize_executable(NewMeeUpClient)
-#endif()
