--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,3 +2,5 @@ cmake_minimum_required(VERSION 3.5)
 project(hw-1)
 
 add_subdirectory(project/client/interface/PartyTime)
+
+add_subdirectory(tests)
