--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ build-PartyTime-Desktop_x86_darwin_generic_mach_o_64bit-Debug
 
 # xemacs temporary files
 *.flc
+/build
+
+.DS_Store
 
 # Vim temporary files
 .*.swp
