--- a/project/client/interface/PartyTime/CMakeLists.txt
+++ b/project/client/interface/PartyTime/CMakeLists.txt
@@ -28,7 +28,7 @@ enable_testing()
 
 add_subdirectory(Pages)
 add_subdirectory(Components)
-# add_subdirectory(API)
+add_subdirectory(API)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -45,24 +45,23 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
     )
 
-    # ${API_LIB}
-    # ${API_INCLUDE_DIRS}
-target_link_libraries(${PROJECT_NAME} PUBLIC ${PAGES_LIB} ${COMPONENTS_LIB} )
-target_include_directories(${PROJECT_NAME} PUBLIC ${PAGES_INCLUDE_DIRS} ${COMPONENTS_INCLUDE_DIRS})
+    
+target_link_libraries(${PROJECT_NAME} PUBLIC ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB} )
+target_include_directories(${PROJECT_NAME} PUBLIC ${API_INCLUDE_DIRS} ${PAGES_INCLUDE_DIRS} ${COMPONENTS_INCLUDE_DIRS})
 
     qt_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 else()
     if(ANDROID)
         add_library(PartyTime SHARED
             ${PROJECT_SOURCES}
-            target_link_libraries(${PROJECT_NAME} PUBLIC ${PAGES_LIB} ${COMPONENTS_LIB})
-            target_include_directories(${PROJECT_NAME} PUBLIC ${PAGES_INCLUDE_DIRS} ${COMPONENTS_INCLUDE_DIRS})
+            target_link_libraries(${PROJECT_NAME} PUBLIC ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB})
+            target_include_directories(${PROJECT_NAME} PUBLIC ${API_INCLUDE_DIRS} ${PAGES_INCLUDE_DIRS} ${COMPONENTS_INCLUDE_DIRS})
         )
     else()
         add_executable(PartyTime
             ${PROJECT_SOURCES}
-            target_link_libraries(${PROJECT_NAME} PUBLIC ${PAGES_LIB} ${COMPONENTS_LIB})
-            target_include_directories(${PROJECT_NAME} PUBLIC ${PAGES_INCLUDE_DIRS} ${COMPONENTS_INCLUDE_DIRS})
+            target_link_libraries(${PROJECT_NAME} PUBLIC ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB})
+            target_include_directories(${PROJECT_NAME} PUBLIC ${API_INCLUDE_DIRS} ${PAGES_INCLUDE_DIRS} ${COMPONENTS_INCLUDE_DIRS})
         )
     endif()
 
@@ -83,3 +82,7 @@ set_target_properties(PartyTime PROPERTIES
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(${PROJECT_NAME})
 endif()
+
+set( ${PROJECT_NAME} PARENT_SCOPE)
+set(ALL_LIB ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB} PARENT_SCOPE)
+set(ALL_LIB_INCLUDES ${API_INCLUDE_DIRS} ${PAGES_INCLUDE_DIRS} ${COMPONENTS_INCLUDE_DIRS} PARENT_SCOPE)
