--- a/project/client/interface/PartyTime/API/CMakeLists.txt
+++ b/project/client/interface/PartyTime/API/CMakeLists.txt
@@ -21,7 +21,7 @@ set(TS_FILES PartyTime_ru_RU.ts)
 set(COMPONENTS)
 
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp)
-file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/**/*.h)
+file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpps)
 
 set(API_LIB_NAME api)
 
