--- a/project/client/connector/CMakeLists.txt
+++ b/project/client/connector/CMakeLists.txt
@@ -1,9 +1,12 @@
-cmake_minimum_required(VERSION 3.23)
+cmake_minimum_required(VERSION 3.18)
 PROJECT(connector)
 set(CMAKE_CXX_STANDARD 20)
 
-set(cxx_flags "-Wall -Wextra -Wpedantic -fprofile -fprofile-arcs -Wredundant-decls -Wsign-conversion -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal")
+set(cxx_flags "-Werror -Wall -Wextra -Wpedantic\
+        -Wredundant-decls -Wsign-conversion\
+        -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal")
 set(sanitizers_flags "-fsanitize=address,undefined -fno-sanitize-recover=all -fsanitize-undefined-trap-on-error")
+set(testing_flags "-fprofile-arcs -ftest-coverage -fPIC -O0")
 set(CMAKE_CXX_FLAGS ${cxx_flags})
 
 if (NOT DEFINED MAIN_DIR)
@@ -18,12 +21,19 @@ OPTION(WITH_SANITIZE "Run with sanitize" OFF)
 
 
 if(WITH_DEBUG)
-    message("RUN with debugging")
+    message("WARNING RUN with debugging")
     set(cxx_flags "${cxx_flags} -g -O0")
     set(CMAKE_CXX_FLAGS ${cxx_flags})
-    message("cxx flags = ${CMAKE_CXX_FLAGS}")
+    message(WARNING "new cxx flags while debugging:\n ${CMAKE_CXX_FLAGS}")
 endif()
 
+if(WITH_TESTING)
+    message(WARNING "RUN with testing")
+    set(cxx_flags "${cxx_flags} ${testing_flags}")
+    set(CMAKE_CXX_FLAGS ${cxx_flags})
+    message(WARNING "********\t new cxx flags while testing:\n ${testing_flags}\n")
+    message(WARNING "********\t new cxx-linker flags while testing:\n ${CMAKE_EXE_LINKER_FLAGS}\n")
+endif()
 
 add_subdirectory(lib)
 
@@ -34,11 +44,14 @@ if(WITH_TESTING)
     elseif(WITH_SANITIZE)
         set(cxx_flags "${cxx_flags} ${sanitizers_flags}")
         set(CMAKE_CXX_FLAGS ${cxx_flags})
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -coverage")
         message("cxx flags = ${CMAKE_CXX_FLAGS}")
 
         message("\n\nRun with sanitize\n\n")
     endif()
-    message("\n\nrun with testing\n\n")
+    message("\nrun with testing\n")
+    set(MEMORYCHECK_COMMAND "/usr/local/bin/valgrind")
+#    include(CTest)
     enable_testing()
     add_subdirectory(tests)
 endif()
