--- a/project/client/connector/Makefile
+++ b/project/client/connector/Makefile
@@ -1,8 +1,12 @@
 TARGET=libconnector.a
+host_dir=
 
-.PHONY: all build rebuild check memcheck cov_test clean debug_build
+.PHONY: all build rebuild check memcheck cov_test clean debug_build  run_docker get_home
 
-all: clean check build test memtest sanitize cov_test
+all: clean check build test memtest sanitize cov_test cov
+
+check:
+	scripts/check.sh
 
 
 build:
@@ -14,10 +18,20 @@ debug_build:
 rebuild: clean build
 
 test:
-	scripts/build.sh -D WITH_TESTING=ON
+	scripts/build.sh -D WITH_TESTING=ON -D WITH_DEBUG=ON
+	scripts/test.sh
 
 sanitize:
 	scripts/build.sh -D WITH_TESTING=ON -D WITH_SANITIZE=ON
 
 clean:
 	rm -rf build
+
+run_docker:
+	docker run -it -v "${PWD}:/project" -v ~/.gitconfig:/etc/gitconfig -v ~/.ssh:/root/.ssh:ro -w "/project" --rm yakwilik/gcc_gdb
+
+cov: test
+	scripts/cov.sh
+
+get_home:
+	echo "$(HOME)"
