--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container: bodjan/cxx
+    needs: [check]
     steps:
       - uses: actions/checkout@v2
       - run: make build
