--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,15 +3,16 @@ name: CI
 on: push
 
 jobs:
-  # check:
-  #   runs-on: ubuntu-latest
-  #   container: bodjan/cxx
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - run: make check
+  check:
+    runs-on: ubuntu-latest
+    container: bodjan/cxx
+    steps:
+      - uses: actions/checkout@v2
+      - run: make check
   build:
     runs-on: ubuntu-latest
     container: bodjan/cxx
+    needs: [check]
     steps:
       - uses: actions/checkout@v2
       - run: make build
