--- a/project/client/connector/CMakeLists.txt
+++ b/project/client/connector/CMakeLists.txt
@@ -6,7 +6,7 @@ set(cxx_flags "-Werror -Wall -Wextra -Wpedantic\
         -Wredundant-decls -Wsign-conversion\
         -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal")
 set(sanitizers_flags "-fsanitize=address,undefined -fno-sanitize-recover=all -fsanitize-undefined-trap-on-error")
-set(testing_flags "-fprofile-arcs -ftest-coverage -fPIC -O0")
+set(testing_flags "-fprofile-arcs -ftest-coverage -fPIC -O0 -coverage")
 set(CMAKE_CXX_FLAGS ${cxx_flags})
 
 if (NOT DEFINED MAIN_DIR)
@@ -22,7 +22,7 @@ OPTION(WITH_SANITIZE "Run with sanitize" OFF)
 
 if(WITH_DEBUG)
     message("WARNING RUN with debugging")
-    set(cxx_flags "${cxx_flags} -g -O0")
+    set(cxx_flags "${cxx_flags} -g")
     set(CMAKE_CXX_FLAGS ${cxx_flags})
     message(WARNING "new cxx flags while debugging:\n ${CMAKE_CXX_FLAGS}")
 endif()
@@ -30,7 +30,7 @@ endif()
 if(WITH_TESTING)
     message(WARNING "RUN with testing")
     set(cxx_flags "${cxx_flags} ${testing_flags}")
-    set(CMAKE_CXX_FLAGS ${cxx_flags})
+    set(CMAKE_CXX_FLAGS "${cxx_flags}")
     message(WARNING "********\t new cxx flags while testing:\n ${testing_flags}\n")
     message(WARNING "********\t new cxx-linker flags while testing:\n ${CMAKE_EXE_LINKER_FLAGS}\n")
 endif()
@@ -44,14 +44,13 @@ if(WITH_TESTING)
     elseif(WITH_SANITIZE)
         set(cxx_flags "${cxx_flags} ${sanitizers_flags}")
         set(CMAKE_CXX_FLAGS ${cxx_flags})
-        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -coverage")
         message("cxx flags = ${CMAKE_CXX_FLAGS}")
 
         message("\n\nRun with sanitize\n\n")
     endif()
     message("\nrun with testing\n")
     set(MEMORYCHECK_COMMAND "/usr/local/bin/valgrind")
-#    include(CTest)
-    enable_testing()
+    include(CTest)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage -lgcov")
     add_subdirectory(tests)
 endif()
