смена контейнера и добавление мемчека

--- a/project/client/connector/CMakeLists.txt
+++ b/project/client/connector/CMakeLists.txt
@@ -5,7 +5,9 @@ set(CMAKE_CXX_STANDARD 20)
 set(cxx_flags "-Werror -Wall -Wextra -Wpedantic\
         -Wredundant-decls -Wsign-conversion\
         -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal")
-set(sanitizers_flags "-fsanitize=address,undefined -fno-sanitize-recover=all -fsanitize-undefined-trap-on-error")
+set(sanitizers_flags "-fsanitize=address -fsanitize-undefined-trap-on-error -fno-sanitize-recover=all -g -O0")
+
+
 set(testing_flags "-fprofile-arcs -ftest-coverage -fPIC -O0 -coverage")
 set(CMAKE_CXX_FLAGS ${cxx_flags})
 
@@ -22,7 +24,7 @@ OPTION(WITH_SANITIZE "Run with sanitize" OFF)
 
 if(WITH_DEBUG)
     message("WARNING RUN with debugging")
-    set(cxx_flags "${cxx_flags} -g")
+    set(cxx_flags "${cxx_flags} -g -O0")
     set(CMAKE_CXX_FLAGS ${cxx_flags})
     message(WARNING "new cxx flags while debugging:\n ${CMAKE_CXX_FLAGS}")
 endif()
@@ -35,22 +37,24 @@ if(WITH_TESTING)
     message(WARNING "********\t new cxx-linker flags while testing:\n ${CMAKE_EXE_LINKER_FLAGS}\n")
 endif()
 
+if(WITH_SANITIZE)
+    set(cxx_flags "${cxx_flags} ${sanitizers_flags}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${sanitizers_flags}")
+    set(CMAKE_CXX_FLAGS ${cxx_flags})
+    message("cxx flags = ${CMAKE_CXX_FLAGS}")
+    message("\n\nRun with sanitize\n\n")
+endif()
+
 add_subdirectory(lib)
 
 if(WITH_TESTING)
     if(WITH_MEMCHECK)
         message("\n\nRun with memcheck\n\n")
-
-    elseif(WITH_SANITIZE)
-        set(cxx_flags "${cxx_flags} ${sanitizers_flags}")
-        set(CMAKE_CXX_FLAGS ${cxx_flags})
-        message("cxx flags = ${CMAKE_CXX_FLAGS}")
-
-        message("\n\nRun with sanitize\n\n")
     endif()
+
     message("\nrun with testing\n")
     set(MEMORYCHECK_COMMAND "/usr/local/bin/valgrind")
     include(CTest)
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage -lgcov")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
     add_subdirectory(tests)
 endif()
