cлияние веток upstream/ Naberezhnaya

--- a/project/server/handler/service/repository/lib/CMakeLists.txt
+++ b/project/server/handler/service/repository/lib/CMakeLists.txt
@@ -14,7 +14,7 @@ file(GLOB INCLUDE_DIRS ${MY_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} STATIC ${MY_SRC_FILES})
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${MY_INCLUDE_DIRS})
+target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIRS})
 
 #
 set(POSTGRES_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
