--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,17 +23,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: make test
-  memtest:
-    runs-on: ubuntu-latest
-    container: bodjan/cxx
-    needs: [test]
-    steps:
-      - uses: actions/checkout@v2
-      - run: make memtest
-  covtest:
-    runs-on: ubuntu-latest
-    container: bodjan/cxx
-    needs: [test]
-    steps:
-      - uses: actions/checkout@v2
-      - run: make covtest
+  # memtest:
+  #   runs-on: ubuntu-latest
+  #   container: bodjan/cxx
+  #   needs: [test]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: make memtest
+  # covtest:
+  #   runs-on: ubuntu-latest
+  #   container: bodjan/cxx
+  #   needs: [test]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: make covtest
