moved the files to interface directory

--- a/project/client/CMakeLists.txt
+++ b/project/client/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(client)
 cmake_minimum_required(VERSION 3.24)
 add_subdirectory(connector)
-# add_subdirectory(interface)
+add_subdirectory(interface)
